--- a/index.html
+++ b/index.html
@@ -437,6 +437,25 @@
               </ul>
             </div>
           </div>
+          <h4 class="mt-4">196 Frame Sequences (Ground Truth)</h4>
+
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2 justify-content-center">
+            <div class="col">
+              <div class="card shadow-sm">
+                <video id="inbtween_mmm" autoplay controls muted loop playsinline height="100%">
+                  <source src="./assets/diversity_length/BAMM/196/crouch_walk_together_196.mp4" type="video/mp4">
+                </video>
+                <div class="card-body mmm-card">
+                  <p class="card-text">BAMM (our)</p>
+                  <!-- <p>More crouches in motion</p> -->
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-body-secondary">(More crouches in realistic motion)</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- Section for 184 frames -->
           <h4 class="mt-4">184 Frame Sequences</h4>
           <div class="row row-cols-1 row-cols-sm-3 row-cols-md-3 g-2">
