updating titles and diversity text

--- a/index.html
+++ b/index.html
@@ -153,8 +153,6 @@
           </div>
         </div>
       </section>
-
-
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-8 col-md-8 mx-auto">
@@ -162,7 +160,6 @@
           </div>
         </div>
       </section>
-
       <div class="album py-5 bg-body-tertiary">
         <div class="container">
           <div class="row">
@@ -423,10 +420,6 @@
                 </div>
               </div>
             </div>
-
-            
-
-
             <!-- <div class="col"><div class="card shadow-sm"><video id="inbtween_mdm" autoplay controls muted loop playsinline height="100%"><source src="./assets/in_between_mdm2.mp4" type="video/mp4"></video><div class="card-body"><p class="card-text">MDM</p><div class="d-flex justify-content-between align-items-center"><small class="text-body-secondary">(Not jump)</small></div></div></div></div> -->
           </div>
           <div class="album py-5 bg-body-tertiary">
@@ -470,12 +463,7 @@
           <div class="row">
             <div class="col">
               <!-- <h3>Length Diversity</h3> -->
-              <h6>Given a text prompt, BAMM generates diverse motion sequences along with diverse sequence lengths. Denoising models, such as MoMask and MMM, face challenges to generate motion with the sequence length that is different from the ground-truth length . </h6>
-
-
-
-                Prompt : <span style='color:#255F83'>“the person crouches and walks forward.”</span> (ground truth length: 196 frames). 
-              <ul>
+              <h6>Given a text prompt, BAMM generates diverse motion sequences along with diverse sequence lengths. Denoising models, such as MoMask and MMM, face challenges to generate motion with the sequence length that is different from the ground-truth length . </h6> Prompt : <span style='color:#255F83'>“the person crouches and walks forward.”</span> (ground truth length: 196 frames). <ul>
                 <li>
                   <b>BAMM:</b> Realistic, diverse crouch-walk sequences; superior in motion fidelity.
                 </li>
@@ -489,7 +477,6 @@
             </div>
           </div>
           <h4 class="mt-4">196 Frame Sequences (Ground Truth)</h4>
-
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2 justify-content-center">
             <div class="col">
               <div class="card shadow-sm">
@@ -506,7 +493,6 @@
               </div>
             </div>
           </div>
-
           <!-- Section for 184 frames -->
           <h4 class="mt-4">184 Frame Sequences</h4>
           <div class="row row-cols-1 row-cols-sm-3 row-cols-md-3 g-2">
@@ -517,7 +503,8 @@
                 </video>
                 <div class="card-body mmm-card">
                   <h6 class="card-text">BAMM</h6>
-                  <p>performing crouches then walks, showcasing more realistic motion.</p>
+                  <!-- <p>performing crouches then walks, showcasing more realistic motion.</p> -->
+                  <small class="text-body-secondary">(performing crouches then walks, showcasing more realistic motion.)</small>
                 </div>
               </div>
             </div>
@@ -528,7 +515,8 @@
                 </video>
                 <div class="card-body">
                   <h6 class="card-text">MoMask</h6>
-                  <p>lacks crouching motion in the overall sequence.</p>
+                  <small class="text-body-secondary">(lacks crouching motion in the overall sequence.)</small>
+                  <!-- <p>lacks crouching motion in the overall sequence.</p> -->
                 </div>
               </div>
             </div>
@@ -539,7 +527,8 @@
                 </video>
                 <div class="card-body">
                   <h6 class="card-text">MMM</h6>
-                  <p>no walking motion present in the sequence.</p>
+                  <small class="text-body-secondary">(no walking motion present in the sequence.)</small>
+                  <!-- <p>no walking motion present in the sequence.</p> -->
                 </div>
               </div>
             </div>
@@ -554,7 +543,8 @@
                 </video>
                 <div class="card-body mmm-card">
                   <h6 class="card-text">BAMM</h6>
-                  <p>features a crouch followed by more pronounced walking.</p>
+                  <small class="text-body-secondary">(a crouch followed by more pronounced walking.)</small>
+                  <!-- <p>a crouch followed by more pronounced walking.</p> -->
                 </div>
               </div>
             </div>
@@ -565,7 +555,8 @@
                 </video>
                 <div class="card-body">
                   <h6 class="card-text">MoMask</h6>
-                  <p>motion sequence is reversed: starts with walking then crouches.</p>
+                  <small class="text-body-secondary">(motion sequence is reversed: starts with walking then crouches.)</small>
+                  <!-- <p>motion sequence is reversed: starts with walking then crouches.</p> -->
                 </div>
               </div>
             </div>
@@ -576,7 +567,8 @@
                 </video>
                 <div class="card-body">
                   <h6 class="card-text">MMM</h6>
-                  <p>lacks any crouching motion in the sequence.</p>
+                  <small class="text-body-secondary">(lacks any crouching motion in the sequence.)</small>
+                  <!-- <p>lacks any crouching motion in the sequence.</p> -->
                 </div>
               </div>
             </div>
@@ -647,13 +639,12 @@
           </div>
         </div>
       </div>
-
       </div>
       <!-- 
         <div class="album py-5 bg-body-tertiary"><div class="container"><div class="row"><div class="col"><h3>Long Sequence Generation:</h3><h6>Generating long sequence motion by combining multiple motions as follow: 'A person is doing a salsa dance moving their legs and arms.', 'a figure sits on the chair.', 'a man jump forward.',
                             'A person punches as if they are boxing.', 'A person is stumbling while walking', 'A person is running forward in a long line.'
                             <span style='color:#660000'>Blue frames indicate the generated short motion sequences.</span><span style='color:#255F83'>Red frames indicate transition frames.</span></h6></div></div><div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2 justify-content-center"><div class="col"><div class="card shadow-sm"><video id="longrange_true" autoplay controls muted loop playsinline height="100%"><source src="./assets/longrange/longrange.mp4" type="video/mp4"></video><div class="card-body mmm-card"><p class="card-text">BAMM (our)</p>
-																																<!-- <div class="d-flex justify-content-between align-items-center"><small class="text-body-secondary">(Realistic Motion)</small></div> -->
+																																	<!-- <div class="d-flex justify-content-between align-items-center"><small class="text-body-secondary">(Realistic Motion)</small></div> -->
       </div>
       </div>
       </div>
