--- a/index.html
+++ b/index.html
@@ -628,11 +628,11 @@
             <div class="col">
               <div class="card shadow-sm">
                 <video id="dance" autoplay controls muted loop playsinline height="100%">
-                  <source src="./assets/text-to-motion/a_person_kneels_down_firstly_on_his_right,_then_his_left.mp4" type="video/mp4">
+                  <source src="./assets/text-to-motion/the_man_is_marching_like_a_soldier.mp4" type="video/mp4">
                 </video>
                 <div class="card-body mmm-card">
                   <h6 class="card-text">BAMM (our)</h6>
-                  <p>A person kneels down firstly on his right, then his left.</p>
+                  <p>The man is marching like a soldier.</p>
                 </div>
               </div>
             </div>
