--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
-        }
+        }More Results
       }
 
       .b-example-divider {
@@ -673,6 +673,66 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+    </section>
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>Failure Cases:</h3>
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
+            <div class="col">
+              <div class="card shadow-sm">
+                <video id="bj" autoplay controls muted loop playsinline height="100%">
+                  <source src="./assets/failure-cases/stumbles_right.mp4" type="video/mp4">
+                </video>
+                <div class="card-body mmm-card">
+                  <h6 class="card-text">BAMM (our)</h6>
+                  <p>a man walks forward, stumbles to the right, and then regains his balance and keeps walking forwards</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-sm">
+                <video id="dance" autoplay controls muted loop playsinline height="100%">
+                  <source src="./assets/failure-cases/bsaketball_hands_merging.mp4" type="video/mp4">
+                </video>
+                <div class="card-body mmm-card">
+                  <h6 class="card-text">BAMM (our)</h6>
+                  <p>a man uses his hands to bounce a basketball twice and takes two big steps forward, then jumps up high with the basketball in his hands and brings his hands up and lets go of the basketball to score a point.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2" style="margin-top: 40px">
+            <div class="col">
+              <div class="card shadow-sm">
+                <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
+                  <source src="./assets/failure-cases/dancing_legs_merging.mp4" type="video/mp4">
+                </video>
+                <div class="card-body mmm-card">
+                  <h6 class="card-text">BAMM (our)</h6>
+                  <p>a person dances energetically in place by swinging alternating legs in front and behind . they dance with with their arms lightly swinging at their sides. the person then finishes dancing and walks to the left.</p>
+                </div>
+              </div>
+            </div>
+            /* <div class="col">
+              <div class="card shadow-sm">
+                <video id="dance" autoplay controls muted loop playsinline height="100%">
+                  <source src="./assets/text-to-motion/the_man_is_marching_like_a_soldier.mp4" type="video/mp4">
+                </video>
+                <div class="card-body mmm-card">
+                  <h6 class="card-text">BAMM (our)</h6>
+                  <p>The man is marching like a soldier.</p>
+                </div>
+              </div>
+            </div> */
           </div>
         </div>
       </div>
