--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                 </video>
                 <div class="card-body mmm-card">
                   <h6 class="card-text">BAMM (our)</h6>
-                  <p>a man uses his hands to bounce a basketball twice and takes two big steps forward, then jumps up high with the basketball in his hands and brings his hands up and lets go of the basketball to score a point.</p>
+                  <p>a man uses his hands to bounce a basketball twice and takes two big step forward, then jumps up high with the basketball in his hands and brings his hands up and lets go of the basketball to score a point.</p>
                 </div>
               </div>
             </div>
