--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                         <source src="./assets/diversity_length/T2M-GPT/156/T2M-GPT_crouch_walk_together_156_video.mp4" type="video/mp4">
                       </video>
                       <div class="card-body">
-                        <h6 class="card-text">MoMask</h6>
+                        <h6 class="card-text">T2M-GPT</h6>
                         <small class="text-body-secondary">(no crouches and walking)</small>
                         <!-- <p>motion sequence is reversed: starts with walking then crouches.</p> -->
                       </div>
