--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                   <div class="col">
                     <div class="card shadow-sm">
                       <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
-                        <source src="./assets/text-to-motion/a person stands with his feet hip length apart.p4.mp4" type="video/mp4">
+                        <source src="./assets/text-to-motion/a person stands with his feet hip length apart.mp4" type="video/mp4">
                       </video>
                       <div class="card-body mmm-card">
                         <h6 class="card-text">BAMM (our)</h6>
@@ -883,6 +883,19 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col">
+                    <div class="card shadow-sm">
+                      <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
+                        <source src="./assets/text-to-motion/boxing.mp4" type="video/mp4">
+                      </video>
+                      <div class="card-body mmm-card">
+                        <h6 class="card-text">BAMM (our)</h6>
+                        <p>a person is boxing, and  throwing alot of combinations and demonstrating fighting footwork. </p>
+                      </div>
+                    </div>
+                  </div>
+
+
                 </div>
               </div>
             </div>
