--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                       </video>
                       <div class="card-body mmm-card">
                         <h6 class="card-text">BAMM (our)</h6>
-                        <p>a man sets to do a backflips then falls back</p>
+                        <p>a man sets to do a backflip then falls back</p>
                       </div>
                     </div>
                   </div>
