--- a/index.html
+++ b/index.html
@@ -886,40 +886,17 @@
                   <div class="col">
                     <div class="card shadow-sm">
                       <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
-                        <source src="./assets/text-to-motion/boxing.mp4" type="video/mp4">
+                        <source src="./assets/text-to-motion/rope.mp4" type="video/mp4">
                       </video>
                       <div class="card-body mmm-card">
                         <h6 class="card-text">BAMM (our)</h6>
-                        <p>a person is boxing, and  throwing several combinations and demonstrating fighting footwork. </p>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col">
-                    <div class="card shadow-sm">
-                      <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
-                        <source src="./assets/text-to-motion/swimming.mp4" type="video/mp4">
-                      </video>
-                      <div class="card-body mmm-card">
-                        <h6 class="card-text">BAMM (our)</h6>
-                        <p>the person is preforming a swimming stroke know as the butterfly stroke. the arms swing from behind and reenter in the water.</p>
+                        <p>a man is jumping rope, then starts jumping  </p>
                       </div>
                     </div>
                   </div>
 
 
 
-                  <div class="col">
-                    <div class="card shadow-sm">
-                      <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
-                        <source src="./assets/text-to-motion/backflip.mp4" type="video/mp4">
-                      </video>
-                      <div class="card-body mmm-card">
-                        <h6 class="card-text">BAMM (our)</h6>
-                        <p>a man sets to do a backflip then falls back</p>
-                      </div>
-                    </div>
-                  </div>
 
                 </div>
               </div>
