--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                       </video>
                       <div class="card-body mmm-card">
                         <h6 class="card-text">BAMM (our)</h6>
-                        <p>a man is jumping rope, then starts jumping  </p>
+                        <p>a man is jumping rope </p>
                       </div>
                     </div>
                   </div>
