--- a/index.html
+++ b/index.html
@@ -886,14 +886,15 @@
                   <div class="col">
                     <div class="card shadow-sm">
                       <video id="forward-lean" autoplay controls muted loop playsinline height="100%">
-                        <source src="./assets/text-to-motion/rope.mp4" type="video/mp4">
+                        <source src="./assets/text-to-motion/boxing.mp4" type="video/mp4">
                       </video>
                       <div class="card-body mmm-card">
                         <h6 class="card-text">BAMM (our)</h6>
-                        <p>a man is jumping rope </p>
+                        <p>a person is boxing, and  throwing several combinations and demonstrating fighting footwork. </p>
                       </div>
                     </div>
                   </div>
+
 
 
 
